# 3leghorse-Maddah-Menu

./: .gitignore  CMakeLists.txt  README.md
docs/: HOOK_INTEGRATION.md
include/: config.hpp  hook_helpers.hpp  menu_stub.hpp  native_interface.hpp  protections.hpp  renderer.hpp
include/hooks/: present_hook.hpp
lua/: free_purchase.lua  free_shopping.lua  persistent_vehicles.lua  stealth_protections.lua  unlocks.lua
src/: config.cpp  dllmain.cpp  hook_helpers.cpp  menu_stub.cpp  native_interface.cpp  protections.cpp  renderer.cpp
src/hooks/: present_hook.cpp
src/hooks/protections/: received_event_integration.cpp
tools/injector/: CMakeLists.txt  README.md  main.cpp
tools/launcher/: CMakeLists.txt  README.md  main.cpp
